--- a/draw.html
+++ b/draw.html
@@ -45,7 +45,7 @@
     </div>
     <!--End of Videocontainer  -->
   </body>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
   <script src="./videocontrol.js"></script>
   <script src="./visualization.js"></script>
 
