--- a/draw.html
+++ b/draw.html
@@ -9,17 +9,19 @@
   svg {
     font: 10px sans-serif;
   }
-
   .area {
     fill: steelblue;
     clip-path: url(#clip);
+    opacity: 0.9;
   }
-
   .axis path,
   .axis line {
     fill: none;
     stroke: #000;
     shape-rendering: crispEdges;
+  }
+  .resize g{
+    color:white;
   }
 
   .brush .extent {
