Testing Detailed Viz iframe

--- a/draw.html
+++ b/draw.html
@@ -88,6 +88,7 @@
     <div class="detail-vis col-4">
       <h4>Here are the detailed visualizations of the time periods you selected:</h4>
       <h5>You can choose multiple time periods using the brush!</h5>
+      <iframe height="800" src="./refugee.html"></iframe>
     </div>
 
   </body>
