--- a/details.html
+++ b/details.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
-
 body {
   font: 10px sans-serif;
 }
@@ -37,7 +36,7 @@ div.tooltip {
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script>
   var margin = {top: 0, right: 0, bottom: 0, left: 0},
-  width = 400 - margin.left - margin.right,
+  width = 600 - margin.left - margin.right,
   height = 250 - margin.top - margin.bottom;
 
   var x = d3.scale.ordinal()
@@ -62,7 +61,7 @@ div.tooltip {
   .style("opacity", 0);
 
   var svg = d3.select("body").append("svg")
-  .attr("height", 900)
+  .attr("height", 500)
   .attr("width", 400)
   .append("g")
   .attr("transform", "translate(300,0)"+" rotate(90)");
@@ -77,7 +76,7 @@ div.tooltip {
       d.total = d.ages[d.ages.length - 1].y1;
     });
 
-    data.sort(function(a, b) { return b.total - a.total; });
+    //data.sort(function(a, b) { return b.total - a.total; });
 
     x.domain(data.map(function(d) { return d.State; }));
     y.domain([0, d3.max(data, function(d) { return d.total; })]);
@@ -124,25 +123,30 @@ div.tooltip {
       .duration(500)
       .style("opacity", 0);});
 
-      var legend = svg.selectAll(".legend")
-      .data(color.domain().slice().reverse())
-      .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-
-      legend.append("rect")
-      .attr("x", width - 18)
-      .attr("width", 18)
-      .attr("height", 18)
-      .style("fill", color);
-
-      legend.append("text")
-      .attr("x", width - 24)
-      .attr("y", 9)
-      .attr("dy", ".35em")
-      .style("text-anchor", "end")
-      .text(function(d) { return d; });
-      console.log("Call parent frame value:"+ parent.data[0]);
+      // var legend = svg.selectAll(".legend")
+      // .data(color.domain().slice().reverse())
+      // .enter().append("g")
+      // .attr("class", "legend")
+      // .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+      //
+      // legend.append("rect")
+      // .attr("x", width - 18)
+      // .attr("width", 18)
+      // .attr("height", 18)
+      // .style("fill", color);
+      //
+      // legend.append("text")
+      // .attr("x", width - 24)
+      // .attr("y", 9)
+      // .attr("dy", ".35em")
+      // .style("text-anchor", "end")
+      // .text(function(d) { return d; });
+      //console.log("Call parent frame value:"+ parent.data[0]);
     });
     </script>
+    <br/>
+    <img id="legend" style="float:right;display:none;" src="./legend.png" width="100px" height="100px"></img>
   </body>
+<script type="text/javascript">
+  if(parent.)
+</script>
