--- a/draw.html
+++ b/draw.html
@@ -77,7 +77,7 @@
             <!-- <svg id="visualisation" width="1200" height="500"></svg> -->
           </div>
             <button type="button" class="btn btn-primary" onclick="addCode()">Add my code...</button>
-            <button type="button" class="btn btn-info" onclick="addExtent()">Draw Detail</button>
+            <button type="button" class="btn btn-info" onclick="drawDetail()">Draw Detail</button>
             <button type="button" class="btn btn-warning" onclick="resetDetail()">Reset Details</button>
         </div>
       </div>
@@ -90,7 +90,8 @@
     <div class="col-4">
       <h4>Here are the detailed visualizations of the time periods you selected:</h4>
       <h5>You can choose multiple time periods using the brush!</h5>
-      <iframe id="detail-vis-frame" style="margin-top:50px;"height="800" width="400" src="./details.html" scrolling="no" frameborder='0'></iframe>
+      <h5>Try to hover your cursor on the bar!</h5>
+      <iframe id="detail-vis-frame" style="margin-top:30px;"height="800" width="400" src="./details.html" scrolling="no" frameborder='0'></iframe>
       <div class="detail-vis">
 
       </div>
