Update to new version of jQuery

--- a/draw.html
+++ b/draw.html
@@ -60,8 +60,9 @@
               <br/>
               3. You can repeat Step 2 to brush for multiple times and compare these intervals! The stacked bar chart shows the comparison of different catagories of chatting topic. (Try to hover your cursor to explore the exact number!)
               <br/>
-              4. If you want to define your own game stage code to the area chart, just simply click 'Add my code...' button, choose the interval, pick a color you like and define your code. Then click 'Submit' button.
-              <br/><br/>(The codes here can be the main theme of selected game stage, for example:"Game loading", "Farming","Teamfight!","Ganking/Camping","End of the game")
+              <br/>
+              * You can also define your own game stage code to the area chart, just simply click 'Add my code...' button, choose the interval, pick a color you like and define your code. Then click 'Submit' button.
+              <br/>(The codes here can be the main theme of selected game stage, for example:"Game loading", "Farming","Teamfight!","Ganking/Camping","End of the game")
 
             </li>
             </ul>
@@ -108,7 +109,7 @@
       </div>
       <footer class="footer">
         <p>2015, Rui (Ray) Pan, For IAT 814, SIAT, SFU</p>
-        <p>Please use (min) 1280*800 resolution. Contact: ruip@sfu.ca</p>
+        <p>Please use (min) 1280*800 resolution. Contact: ruip@sfu.ca <br/>Star this project on <a href="https://github.com/Ev3rlasting/Twitch.tv-Chat-Room-Visualization">GitHub</a>! </p>
       </footer>
     </div>
   </div>
