--- a/connectTwitch.html
+++ b/connectTwitch.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 </head>
 <script type="text/javascript">
-var channel = "tsm_bjergsen";
+var channel = "YOU CHANNEL NAME";
 var viewerNumber;
 
 var options = {
