--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <script src="https://ttv-api.s3.amazonaws.com/twitch.min.js"></script>
   <script src="jscolor.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap-theme.css">
   <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/dot-luv/jquery-ui.css" />
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-colorpicker/2.3.0/css/bootstrap-colorpicker.css" />
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href="./jumbotron-narrow.css" rel="stylesheet">
   <style>
   svg {
@@ -63,6 +63,7 @@
               <br/>
               * You can also define your own game stage code to the area chart, just simply click 'Add my code...' button, choose the interval using time slider, pick a color you like and assign your code. Click 'Submit' button afterwards.
               <br/>(The codes here can be the main theme of selected game stage, for example:"Game loading", "Farming","Teamfight!","Ganking/Camping","End of the game")
+              <br/>The copyright of the video belongs to the streamer and Twitch.tv
             </li>
             </ul>
           </nav>
@@ -75,7 +76,7 @@
         margin-left: 0px;
         ">
         <video id="lol" width="700" height="auto" controls>
-          <source src="./videos/trimmed.mp4" type="video/mp4">
+          <source src="https://s3-us-west-1.amazonaws.com/godknowswhatthenameis/trimmed.mp4" type="video/mp4">
           </video>
           <br/>
           <div class="video-buttons-area">
@@ -107,8 +108,8 @@
       </div>
       </div>
       <footer class="footer">
-        <p>2015, Rui (Ray) Pan, For IAT 814, SIAT, SFU</p>
-        <p>Please use (min) 1280*800 resolution. Contact: ruip@sfu.ca <br/>Star this project on <a href="https://github.com/Ev3rlasting/Twitch.tv-Chat-Room-Visualization">GitHub</a>! </p>
+        <p>2015, Rui (Ray) Pan</p>
+        <p>Please use (min) 1280*800 resolution. <br/>Star this project on <a href="https://github.com/Ev3rlasting/Twitch.tv-Chat-Room-Visualization">GitHub</a>! </p>
       </footer>
     </div>
   </div>
